--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.27",
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.11.0",
     "class-variance-authority": "^0.7.0",
@@ -23,7 +24,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "vaul": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
@@ -42,6 +44,7 @@
     "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "fluid-tailwind": "^1.0.4",
     "globals": "^15.8.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
