--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ariakit/react": "^0.4.14",
     "@floating-ui/react": "^0.26.27",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.11.0",
     "class-variance-authority": "^0.7.0",
@@ -20,6 +22,7 @@
     "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.3.5",
     "lenis": "^1.1.13",
+    "motion": "^11.14.4",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
